; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers_joypad/wiiu/extr_wpad_driver.c_get_touch_coordinates.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers_joypad/wiiu/extr_wpad_driver.c_get_touch_coordinates.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.video_viewport = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, %struct.video_viewport*, i32*)* @get_touch_coordinates to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_touch_coordinates(i32* %0, i32* %1, %struct.video_viewport* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.video_viewport*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store %struct.video_viewport* %2, %struct.video_viewport** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load %struct.video_viewport*, %struct.video_viewport** %7, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @get_calibrated_point(i32* %9, %struct.video_viewport* %10, i32* %11)
  %13 = load i32*, i32** %5, align 8
  %14 = load %struct.video_viewport*, %struct.video_viewport** %7, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @apply_clamping(i32* %13, %struct.video_viewport* %14, i32* %15)
  ret void
}

declare dso_local i32 @get_calibrated_point(i32*, %struct.video_viewport*, i32*) #1

declare dso_local i32 @apply_clamping(i32*, %struct.video_viewport*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
